<resources>

    <string name="app_name">Mendeleo Tracker</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="username">Full Name</string>
    <string name="ID">National ID</string>
    <string name="phone">Phone Number </string>
    <string name="Forgot">Forgot Password </string>
    <string name="password">Password</string>
    <string name="LOGIN">LOGIN</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Already have an account</string>
    <string name="description">Track and monitor government projects across Kenya</string>

    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>

    <!-- Home Page -->

    <string name="calender1">Jan 2024 - Dec 2024 </string>
    <string name="calender2">Jan 2025 - Dec 2025 </string>
    <string name="calender3">Feb 2025 - Aug 2025 </string>
    <string name="County1">Kibera Road Expansion </string>
    <string name="County2">Mombasa </string>
    <string name="Nairobi">Nairobi </string>

    <string name="Ongoing">Ongoing </string>
    <string name="County3">Machackos </string>
    <string name="River">Arthi River Irrigation </string>
    <string name="KES_45M">KES 45M </string>
    <string name="image1_description">Kibera Road Construction</string>
    <string name="image2_description">Mombasa County Hospital</string>
    <string name="Extension">Extension of Kibera Road to Join with Ngong Road </string>
    <string name="Construction">Construction of a modern health Facility. </string>

    <string name="Irrigation">Construction of irrigation channels to support small-scale farmers </string>
    <string name="Progress1">40%</string>
    <string name="Progress2">90%</string>
    <string name="Progress3">30%</string>
    <string name="Completed">Completed</string>
    <string name="Delayed">Delayed</string>


    <string name="Mombasa">Mombasa County Hospital </string>

    <!-- Tags-->
    <string name="Infrastructure">Infrastructure</string>\
    <string name="Education">Education</string>
    <string name="Agriculture">Agriculture</string>
    <string name="Health">Healthcare</string>
    <string name="Water">Water</string>

    <!-- Details Page-->

    <!-- Budget Card-->

    <string name="Kibera_Road">Kibera Road Expansion</string>
    <string name="kibera_Nairobi">Kibera, Nairobi county - Along Kobera Drive extending2.5km from olympic to kibera south road</string>
    <string name="Budget">Budget Breakdown</string>
    <string name="KES_25M">KES 25M</string>
    <string name="Materials">Materials</string>
    <string name="Labour">Labour</string>
    <string name="Planning">Planning</string>
    <string name="KES_8M">KES 8M</string>
    <string name="KES_2M">KES 2M</string>
    <string name="Report">Report Issue</string>

    <!-- Timeline Card-->
    <string name="Timeline">Timeline</string>
    <string name="Start">Start: January 2024 </string>
    <string name="End">End: December 2024 </string>
    <string name="Date1">March 2024 </string>
    <string name="Date2">June 2024 </string>
    <string name="Date3">September 2024 </string>
    <string name="Preparation">Ground preparation and initial excavation </string>
    <string name="Road">Road based construction </string>
    <string name="Asphalt">Asphalt Laying </string>

    <!-- Project Progress-->
    <string name="Progress">Project Progress </string>
    <string name="Overall">Overall Progress </string>
    <string name="Updates">Recent Updates </string>
    <string name="Date4">2025-02-15</string>
    <string name="Ground">Ground clearing completed ahead of schedule. </string>

    <!-- Report page -->
    <string name="Feedback">Your feedback really matters to us </string>
    <string name="Category">Report Category</string>
    <string name="Cancel">Cancel </string>
    <string name="Submit">Submit </string>
    <string name="Evidence">Upload Evidence </string>
    <string name="Detail">Please describe the issue in detail.... </string>
    <string name="Description">Description</string>
    <string name="Upload">Click to Upload image </string>
</resources>